# licensing-service-client/src/main/resources/licensing-service-api-docs.yaml
@@ -4,19 +4,19 @@ info:
   description: Licensing Service type-safe generic API responses with OpenAPI
   version: 1.0.1
 servers:
-- url: http://localhost:8081/licensing-service
-  description: Licensing Service URL
+  - url: http://localhost:8081/licensing-service
+    description: Licensing Service URL
 paths:
-  /v1/licenses/tokens:
+  /v1/licenses/access:
     post:
       tags:
-      - license-validation-controller
-      operationId: issueToken
+        - license-controller
+      operationId: createAccess
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/IssueTokenRequest"
+              $ref: "#/components/schemas/IssueAccessRequest"
         required: true
       responses:
         "200":
@@ -24,26 +24,26 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ApiResponseLicenseValidationResponse"
-  /v1/licenses/tokens/validate:
+                $ref: "#/components/schemas/ApiResponseLicenseAccessResponse"
+  /v1/licenses/access/validate:
     post:
       tags:
-      - license-validation-controller
-      operationId: validateToken
+        - license-controller
+      operationId: validateAccess
       parameters:
-      - name: License-Token
-        in: header
-        required: true
-        schema:
-          type: string
-          maxLength: 400
-          minLength: 200
-          pattern: "^[A-Za-z0-9_-]+\\.[A-Za-z0-9_-]+\\.[A-Za-z0-9_-]+$"
+        - name: License-Token
+          in: header
+          required: true
+          schema:
+            type: string
+            maxLength: 400
+            minLength: 200
+            pattern: "^[A-Za-z0-9_-]+\\.[A-Za-z0-9_-]+\\.[A-Za-z0-9_-]+$"
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ValidateTokenRequest"
+              $ref: "#/components/schemas/ValidateAccessRequest"
         required: true
       responses:
         "200":
@@ -51,10 +51,10 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ApiResponseLicenseValidationResponse"
+                $ref: "#/components/schemas/ApiResponseLicenseAccessResponse"
 components:
   schemas:
-    IssueTokenRequest:
+    IssueAccessRequest:
       type: object
       properties:
         serviceId:
@@ -84,11 +84,11 @@ components:
         forceTokenRefresh:
           type: boolean
       required:
-      - instanceId
-      - licenseKey
-      - serviceId
-      - serviceVersion
-      - signature
+        - instanceId
+        - licenseKey
+        - serviceId
+        - serviceVersion
+        - signature
     ApiError:
       type: object
       properties:
@@ -96,27 +96,27 @@ components:
           type: string
         message:
           type: string
-    ApiResponseLicenseValidationResponse:
+    ApiResponseLicenseAccessResponse:
       allOf:
-      - $ref: "#/components/schemas/ApiResponse"
-      - type: object
-        properties:
-          data:
-            $ref: "#/components/schemas/LicenseValidationResponse"
+        - $ref: "#/components/schemas/ApiResponse"
+        - type: object
+          properties:
+            data:
+              $ref: "#/components/schemas/LicenseAccessResponse"
       x-api-wrapper: true
-      x-api-wrapper-datatype: LicenseValidationResponse
-    LicenseValidationResponse:
+      x-api-wrapper-datatype: LicenseAccessResponse
+    LicenseAccessResponse:
       type: object
       properties:
         status:
           type: string
           enum:
-          - TOKEN_CREATED
-          - TOKEN_REFRESHED
-          - TOKEN_ACTIVE
+            - TOKEN_CREATED
+            - TOKEN_REFRESHED
+            - TOKEN_ACTIVE
         licenseToken:
           type: string
-    ValidateTokenRequest:
+    ValidateAccessRequest:
       type: object
       properties:
         serviceId:
@@ -140,10 +140,10 @@ components:
           maxLength: 500
           minLength: 20
       required:
-      - instanceId
-      - serviceId
-      - serviceVersion
-      - signature
+        - instanceId
+        - serviceId
+        - serviceVersion
+        - signature
     ApiResponse:
       type: object
       properties:
