# licensing-service/src/main/java/io/github/bsayli/licensing/api/openapi/SwaggerLicensingResponseCustomizer.java
@@ -2,7 +2,7 @@ package io.github.bsayli.licensing.api.openapi;
 
 import static io.github.bsayli.licensing.common.openapi.OpenApiSchemas.SCHEMA_API_RESPONSE;
 
-import io.github.bsayli.licensing.api.dto.LicenseValidationResponse;
+import io.github.bsayli.licensing.api.dto.LicenseAccessResponse;
 import io.github.bsayli.licensing.common.openapi.ApiResponseSchemaFactory;
 import org.springdoc.core.customizers.OpenApiCustomizer;
 import org.springframework.context.annotation.Bean;
@@ -12,7 +12,7 @@ import org.springframework.context.annotation.Configuration;
 public class SwaggerLicensingResponseCustomizer {
 
   private static final String REF_LICENSE_VALIDATION_RESPONSE =
-      LicenseValidationResponse.class.getSimpleName();
+      LicenseAccessResponse.class.getSimpleName();
 
   private static String apiResponseWrapperNameFor(String ref) {
     return SCHEMA_API_RESPONSE + ref;
