# licensing-service/src/main/java/io/github/bsayli/licensing/service/LicenseValidationService.java
@@ -1,12 +1,12 @@
 package io.github.bsayli.licensing.service;
 
-import io.github.bsayli.licensing.api.dto.IssueTokenRequest;
-import io.github.bsayli.licensing.api.dto.ValidateTokenRequest;
+import io.github.bsayli.licensing.api.dto.IssueAccessRequest;
+import io.github.bsayli.licensing.api.dto.ValidateAccessRequest;
 import io.github.bsayli.licensing.domain.result.LicenseValidationResult;
 
 public interface LicenseValidationService {
 
-  LicenseValidationResult validateLicense(IssueTokenRequest request);
+  LicenseValidationResult validateLicense(IssueAccessRequest request);
 
-  LicenseValidationResult validateLicense(ValidateTokenRequest request, String token);
+  LicenseValidationResult validateLicense(ValidateAccessRequest request, String token);
 }
