# licensing-service/src/main/java/io/github/bsayli/licensing/service/validation/LicensePolicyValidator.java
@@ -1,15 +1,15 @@
 package io.github.bsayli.licensing.service.validation;
 
-import io.github.bsayli.licensing.api.dto.IssueTokenRequest;
-import io.github.bsayli.licensing.api.dto.ValidateTokenRequest;
+import io.github.bsayli.licensing.api.dto.IssueAccessRequest;
+import io.github.bsayli.licensing.api.dto.ValidateAccessRequest;
 import io.github.bsayli.licensing.domain.model.LicenseInfo;
 import java.util.List;
 
 public interface LicensePolicyValidator {
 
-  void assertValid(LicenseInfo licenseInfo, IssueTokenRequest request);
+  void assertValid(LicenseInfo licenseInfo, IssueAccessRequest request);
 
-  void assertValid(LicenseInfo licenseInfo, ValidateTokenRequest request);
+  void assertValid(LicenseInfo licenseInfo, ValidateAccessRequest request);
 
   boolean isInstanceIdMissing(String instanceId, List<String> instanceIds);
 }
